--- a/src/plugins/core/setup/css/setup.css
+++ b/src/plugins/core/setup/css/setup.css
@@ -1,15 +1,25 @@
-/* Welcome Window Styles */
+/* Setup Window Styles */
+
+/* Ensure the height scales correctly */
+body,
+html,
+main {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
 
 body {
-	padding: 0;
-	margin: 0; 
 	font-family: -apple-system;
 	font-size: 16px;
 	line-height: 1.5;
 	color: #606c71;
 	background-color: #159957;
 	background-image: linear-gradient(120deg, #ba1d22, #7164e0);
-	height: 100%;
 	overflow:hidden;
 }
 
@@ -17,7 +27,11 @@ a { color: #1e6bb8; text-decoration: none; }
 a:hover { text-decoration: underline; }
 
 .buttons {
-	margin-top: 1rem;
+	position: absolute;
+	bottom: -8px;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 1001;
 }
 
 .button {
@@ -46,8 +60,8 @@ body {
 	padding: 2rem 6rem;
 }
 
-.panel .content h1 { margin-top: 0; margin-bottom: 0.1rem; font-size: 2.25rem; }
-.panel .content h2 { margin-bottom: 2rem; font-weight: normal; opacity: 0.7; font-size: 1.15rem; }
+.panel .content h1 { margin-top: 0; margin-bottom: 0rem; font-size: 2.25rem; }
+.panel .content h2 { margin: 0; font-weight: normal; opacity: 0.7; font-size: 1.15rem; }
 
 .panel .content img.icon {
 	width: 150px;
@@ -55,12 +69,19 @@ body {
 }
 
 .progress {
-	color: #c5c2c2;
+	color: #3c3131;
 	font-size: 1em;
 	padding: 0;
 	letter-spacing: 5px;
+	position: absolute;
+	bottom: 0;
+    left: 50%;
+	height: 20px;
+    max-width: 200px;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 1000;
 }
 
 .selected-dot {
-	color: #3c3131;
+	color: #c5c2c2;
 }
