--- a/src/plugins/core/setup/css/setup.css
+++ b/src/plugins/core/setup/css/setup.css
@@ -69,7 +69,7 @@ body {
 }
 
 .progress {
-	color: #3c3131;
+	color: rgba(255, 255, 255, 0.2);
 	font-size: 1em;
 	padding: 0;
 	letter-spacing: 5px;
@@ -83,5 +83,5 @@ body {
 }
 
 .selected-dot {
-	color: #c5c2c2;
+	color: rgba(255, 255, 255, 0.8);
 }
