--- a/src/plugins/core/preferences/panels/plugins/css/plugins.css
+++ b/src/plugins/core/preferences/panels/plugins/css/plugins.css
@@ -42,7 +42,7 @@
 	white-space: nowrap;
 	border: 1px solid #cccccc;
 	padding: 8px;
-	background-color: #ffffff;
+	background-color: #161616;
 	text-align: left;
 }
 
@@ -69,6 +69,9 @@
 	width:15%;
 }
 
+.rowOption a {
+	color: white;
+}
 
 .plugins thead tr, .plugins tbody tr {
 	display: table;
@@ -101,7 +104,7 @@
 }
 
 .plugins tbody tr:nth-child(even) {
-	background-color: #f5f5f5
+	background-color: #4a4a4a;
 }
 
 .plugins tbody tr:hover {
