Added "Set All Shortcuts to None" Button
Closes #766

--- a/src/plugins/core/preferences/panels/shortcuts/css/shortcuts.css
+++ b/src/plugins/core/preferences/panels/shortcuts/css/shortcuts.css
@@ -81,7 +81,14 @@
 
 .resetShortcuts {
 	margin: 10px 0px;
+	text-align: left;
+	float: left;
+}
+
+.resetShortcutsToNone {
+	margin: 10px 0px;
 	text-align: right;
+	float: right;
 }
 
 .buttonDisabled {
