--- a/src/plugins/core/preferences/panels/midi/css/midi.css
+++ b/src/plugins/core/preferences/panels/midi/css/midi.css
@@ -96,11 +96,17 @@ midiRowType {
 	color: white;
 }
 
-.refreshMidi {
+.openAudioMIDISetup {
 	margin: 10px 0px;
+	float: left;
+	width: 200px;
+}
+
+.refreshMidi {
+	margin: 10px 0px 0px 5px;
 	text-align: center;
 	float: left;
-	width: 170px;
+	width: 200px;
 }
 
 .applyTopDeviceToAll {
@@ -109,10 +115,6 @@ midiRowType {
 	float: left;
 	width: 170px;
 	margin-left: 5px;
-}
-
-.openAudioMIDISetup {
-	margin: 10px 0px;
 }
 
 .resetShortcutsToNone {
