--- a/src/plugins/core/streamdeck/prefs/css/streamdeck.css
+++ b/src/plugins/core/streamdeck/prefs/css/streamdeck.css
@@ -100,6 +100,24 @@
 	overflow-y: scroll;
 }
 
+.streamDeckLabel {
+	-webkit-appearance: none;
+	text-shadow:0 1px 0 rgba(0,0,0,0.4);
+	background-color: rgba(65,65,65,1);
+	color: #bfbfbc;
+	text-decoration: none;
+	padding: 2px 18px 2px 5px;
+	border:0.5px solid black;
+	margin: 2px 2px;
+	display: inline-block;
+	border-radius: 3px;
+	border-radius: 0px;
+	cursor: default;
+	font-family: -apple-system;
+	font-size: 13px;
+	width: 150px;
+}
+
 .streamDeck tbody tr:hover {
 	background-color: #006dd4;
 	color: white;
