Fixed text overflow issues in languages other than English
- Closes #1994

--- a/src/plugins/core/preferences/manager/css/preferences.css
+++ b/src/plugins/core/preferences/manager/css/preferences.css
@@ -59,7 +59,11 @@ select {
 	border-radius: 3px;
 	cursor: default;
 	text-align: center;
+	white-space: nowrap;
+  	overflow: hidden;
+  	text-overflow: ellipsis;
 }
+
 .button:active {
 	color: white;
 	border-color:#1262fb;
